--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
     "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.30.1"
   },
   "lint-staged": {
     "*.js": [
