--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.14.1",
+    "@types/prompts": "^2.4.9",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-prettier": "^5.2.6",
@@ -40,5 +41,8 @@
       "eslint --fix",
       "prettier --write"
     ]
+  },
+  "dependencies": {
+    "prompts": "^2.4.2"
   }
 }
