--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^29.5.14",
     "@types/mocha": "^10.0.10",
     "@types/node": "^22.14.1",
+    "@types/pg": "^8.11.14",
     "@types/prompts": "^2.4.9",
     "eslint": "^9.25.0",
     "eslint-config-prettier": "^10.1.2",
@@ -49,6 +50,8 @@
   },
   "dependencies": {
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
+    "pg": "^8.15.5",
     "prompts": "^2.4.2"
   }
 }
