--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ POSTGRES_HOST=localhost
 POSTGRES_USER=sam
 POSTGRES_PASSWORD=secret123
 POSTGRES_DB=leetcode_logs
+PG_PORT=5432  # It's good to have this here too
