--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "test:watch": "jest --watch",
     "migrate": "ts-node src/db/migrate.ts",
     "app": "ts-node src/cli/leetcode-log.ts",
-    "all-tests": "npx jest tests/"
+    "all-tests": "npx jest tests/",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -45,7 +46,7 @@
     "typescript-eslint": "^8.30.1"
   },
   "lint-staged": {
-    "*.js": [
+    "*.{js,ts,tsx}": [
       "eslint --fix",
       "prettier --write"
     ]
